2013-06-13 Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/functions_user.php: Modified style of new autocomplete plugin.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* operation/leads/lead_detail.php,
	operation/projects/people_manager.php,
	operation/projects/project_detail.php,
	operation/workorders/wo.php,
	operation/users/user_spare_workunit.php,
	operation/users/user_task_assigment.php,
	operation/inventories/inventory_detail.php,
	operation/user_report/report_annual.php,
	operation/user_report/monthly.php,
	operation/user_report/report_full.php,
	operation/companies/company_detail.php,
	operation/incidents/incident_search_logic.php,
	godmode/grupos/configurar_grupo.php,
	include/js/integria.js,
	include/js/integria_incident_search.js: Modified to use the new jquery
	plugin.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* include/ajax/users.php: Upload missed file related to jquery autocomplete
	modification.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* godmode/usuarios/configurar_usuarios.php,
	operation/companies/company_detail.php: Modified to use new autocomplete plugin.
	* include/js/jquery.autocomplete.js: Deleted old autocomplete library.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* index.php: Loading jquery validate and validate functions in index page
	* include/js/jquery.ui.autocomplete.js: Changed autocomplete library for jquery 
	ui plugin.
	* include/functions_user.php: Modified functions to use new jquery autocomplete
	plugin.
	* include/styles/integria.css: Changed user autocomplete style.
	* include/js/integria_incident_search.js: Created a new function to bind 
	autocomplete feature to inputs.
	* operation/incidents/incident_detail.php,
	operation/incidents/incident_search_logic.php,
	operation/leads/lead_detail.php,
	operation/projects/people_manager.php,
	operation/projects/project_detail.php,
	operation/workorders/wo.php,
	operation/users/user_spare_workunit.php,